// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detail label is translated 1`] = `undefined`;

exports[`subtitle is translated with date range 1`] = `
Array [
  "ocp_dashboard.widget_subtitle",
  Object {
    "count": 2,
    "endDate": "formated date",
    "month": 1,
    "startDate": "formated date",
  },
]
`;

exports[`subtitle is translated with single date 1`] = `
Array [
  "ocp_dashboard.widget_subtitle",
  Object {
    "count": 1,
    "endDate": "formated date",
    "month": 1,
    "startDate": "formated date",
  },
]
`;

exports[`title is translated 1`] = `
Array [
  "title",
  Object {
    "endDate": "formated date",
    "month": 1,
    "startDate": "formated date",
  },
]
`;

exports[`trend title is translated 1`] = `
Array [
  "trend title",
]
`;
